data/derived/comb/progs/unify/prog5858.ml.out
Characters 80-86:
  (let func output = ((f output),(f output) = b) in func b) 
                                                    ^^^^^^
Error: This expression has type 'a * bool
       but an expression was expected of type 'b -> 'b * bool
